# dfc-opencl

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark.c  parser.c  parser.h  tests.cpp
benchmark/test-files/: inline-hex.txt  multiple-hex.txt  multiple-mixed.txt  multiple-text.txt  single-hex.txt  single-text.txt
example/: CMakeLists.txt  example.c  test
scripts/: format.sh  length-freq.py  requires-format.sh  subchar-freq.py
src/: constants.h  dfc.c  dfc.h  dfc_framework.h  feature-flags.h  memory.c  memory.h  search.h  shared-functions.h  shared-internal.h  shared.h  timer.c  timer.h  utility.c  utility.h
src/search/: kernel.cl  search-cpu.c  search-cpu.h  search-gpu.c  search-gpu.h  search.c
tests/: CMakeLists.txt  elitehacker.txt  tests.cpp
